! Fixed CSS/JS caching on Mobile Safari. (It appears the extension issue only occurs in the desktop version.) (Subs-Cache.php) ! Fixed Mobile Safari crash (why only this?) caused by incorrectly moved variable declaration. (topic.js) ! Webkit keyword wasn't removed from CSS URLs in the main file caching function. (Subs-Cache.php) ! Added missing device icons to stable_icons(). (Subs.php) * IE always defined createTextRange, doesn't it? (Class-Editor.php) * Added a meta tag for iPhone devices to increase image and text size. It doesn't look very good, but it's way more usable. (index.iphone.css, index.template.php) * Overflow problems in polls. (sections.css)

--- a/Themes/default/styles/index.iphone.css
+++ b/Themes/default/styles/index.iphone.css
@@ -1,10 +1,32 @@
 
-#edge, #sidebar
-	display: block
-
+// Main area should have slightly larger text.
 #main_content
 	display: block
 	padding: 4px 4px 8px
+	font-size: 1.4em
+	line-height: 1.5em
+
+// Make the poster info area less prominent.
+.poster
+	width: 7.5em
+	h4
+		font-size: 80%
+		overflow: hidden
+
+.postarea
+	margin-left: 8em
+
+// Sidebar should be at the bottom, in full width.
+#edge, #sidebar
+	display: block
+	clear: both
+	width: 100%
 
 #content div.frame
 	padding: 0 10px 20px
+
+#board_list
+	td.stats
+		display: none
+	td.lastpost
+		width: 40%
