--- a/Themes/default/styles/sections.css
+++ b/Themes/default/styles/sections.css
@@ -230,9 +230,9 @@ img.new_posts
 		padding: 0 .5em .5em
 
 #poll_moderation
-	margin: 0
+	margin: 0 0 1em
 	padding: 0
-	overflow: auto
+	overflow: hidden
 
 // Onto the posts
 #forumposts
